--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,7 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-<h1 th:text="'Hello JDBC'"/>
-<a th:href="@{write_form}">사용자 등록</a>
+<h1 th:text="'user'"/>
 </body>
 </html>
